After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759546 - Panel hangs when trying to edit transparency level
Panel hangs when trying to edit transparency level
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-16 13:31 UTC by Dmitry Shachnev
Modified: 2015-12-23 05:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dmitry Shachnev 2015-12-16 13:31:35 UTC
Looks like an endless loop (either 1-2-3-4-5-6-7-1 or 1-2-6-7-1):

1) panel_properties_dialog_opacity_scale_changed
2) panel_properties_dialog_background_color_set_from_rgba
3) write value to gsettings?
4) gsettings callback?
5) panel_properties_dialog_background_changed
6) panel_properties_dialog_background_color_update_from_rgba
7) gtk_range_set_value
Comment 1 Alberts Muktupāvels 2015-12-23 02:12:32 UTC
Fixed in master by removing 'Style:' option. Now transparency can be set from GtkColorButton.
Comment 2 Dmitry Shachnev 2015-12-23 05:39:36 UTC
Thanks Alberts!