panel-properties-dialog: remove style option

Remove style option from properties dialog. Transparency can be
set from GtkColorButton.

https://bugzilla.gnome.org/show_bug.cgi?id=759546